# imapsync-scriptgen

./: .coveragerc  .flake8  .gitignore  README.md  pyproject.toml
.continue/rules/: CONTINUE.md
.github/workflows/: CI-CD.yml
src/imapsync_scriptgen/: __init__.py  cli.py  cli_adapter.py  generator.py  models.py  parser.py  utils.py
tests/: fixtures.py  test_cli.py  test_cli_adapter.py  test_generator.py  test_parser.py  test_utils.py
