[project]
name = "imapsync-scriptgen"
version = "0.1.0"
description = "Generate imapsync command scripts from user credential lists."
authors = [
    {name = "hallowslab"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry.scripts]
imapsync-scriptgen = "imapsync_scriptgen.cli:main"

[tool.poetry]
packages = [{include = "imapsync_scriptgen", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
