[project]
name = "imapsync-scriptgen"
version = "0.1.0"
description = "Generate imapsync command scripts from user credential lists."
authors = [
    {name = "hallowslab"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]

[tool.poetry.scripts]
imapsync-scriptgen = "imapsync_scriptgen.cli:main"

[tool.poetry]
packages = [{include = "imapsync_scriptgen", from = "src"}]

[tool.taskipy.tasks]
lint = "black . && ruff check"
test = "pytest --cov=src.imapsync_scriptgen --cov-report=term-missing"
coverage = "coverage html"
all = "task lint && task test && task coverage"

[tool.coverage.run]
branch = true
source = ["src.imapsync_scriptgen"]

[tool.coverage.report]
show_missing = true
omit = ["*/tests/*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "coverage (>=7.12.0,<8.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]
