[project]
name = "imapsync-scriptgen"
version = "0.1.0"
description = "Generate imapsync command scripts from user credential lists."
authors = [
    {name = "hallowslab"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]

[tool.poetry.scripts]
imapsync-scriptgen = "imapsync_scriptgen.cli:main"

[tool.poetry]
packages = [{include = "imapsync_scriptgen", from = "src"}]

[tool.taskipy.tasks]
lint = "black . && ruff check && flake8 src tests"
types = "mypy -p src.imapsync_scriptgen"
test = "pytest --cov=src.imapsync_scriptgen --cov-report=term-missing"
coverage = "coverage html"
all = "task lint && task types && task test && task coverage"
testbadge = "pytest --junitxml=reports/junit/junit.xml --html=reports/junit/report.html && genbadge tests"
coveragebadge = "coverage run -m pytest && coverage xml -o reports/coverage/coverage.xml && coverage html -d reports/coverage/html && genbadge coverage"
flakebadge = "flake8 src tests --exit-zero --format=html --htmldir ./reports/flake8 --statistics --tee --output-file reports/flake8/flake8stats.txt && genbadge flake8"
badges = "task testbadge && task coveragebadge && task flakebadge"

[tool.coverage.run]
branch = true
source = ["src.imapsync_scriptgen"]

[tool.coverage.report]
show_missing = true
omit = ["*/tests/*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "coverage (>=7.12.0,<8.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "genbadge[all] (>=1.1.3,<2.0.0)",
    "pytest-html (>=4.1.1,<5.0.0)"
]
